--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,9 @@
 {
   "Тестовый пример": "Test example",
   "Перевод": "Translate",
-  "Язык": "English"
+  "Язык": "English",
+  "Страница не найдена": "Not found page",
+  "Произошла непредвиденная ошибка": "An Unexpected Error Occurred",
+  "Обновить страницу": "Refresh Page",
+  "Throw Error": "Throw Error"
 }
