--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,7 @@
   "Страница не найдена": "Not found page",
   "Произошла непредвиденная ошибка": "An Unexpected Error Occurred",
   "Обновить страницу": "Refresh Page",
-  "Throw Error": "Throw Error"
+  "Throw Error": "Throw Error",
+  "Главная": "Главная",
+  "toggle": "toggle"
 }
