--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,7 @@
   "Страница не найдена": "Страница не найдена",
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
-  "Throw Error": "Throw Error"
+  "Throw Error": "Throw Error",
+  "Главная": "Main",
+  "toggle": "toggle"
 }
